feat: agregar traducciones completas en español

--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,9 +1,31 @@
 {
-  "inicio": "Inicio",
-  "adopta": "Adopta",
-  "apadrina_dona": "Apadrina y Dona",
-  "apoyanos": "Apóyanos",
-  "hogares_tepa": "Hogares Tepa",
-  "blog": "Blog",
-  "contactanos": "Contáctanos"
+  "huellitas": "Huellitas",
+  "administrador": "Administrador",
+  "especie": "Especie",
+  "estado": "Estado",
+  "sexo": "Sexo",
+  "tamano": "Tamaño",
+  "ubicacion": "Ubicación",
+  "todos": "Todos",
+  "buscar": "Buscar",
+  "cerrar": "Cerrar",
+  "lapaz": "La Paz",
+  "perro": "Perro",
+  "gato": "Gato",
+  "conejo": "Conejo",
+  "hamster": "Hámster",
+  "disponible": "Disponible",
+  "urgente": "Urgente",
+  "invisible": "Invisible",
+  "macho": "Macho",
+  "hembra": "Hembra",
+  "mini": "Mini",
+  "pequeno": "Pequeño",
+  "mediano": "Mediano",
+  "grande": "Grande",
+  "gigante": "Gigante",
+  "filtros_busqueda": "Filtros de Búsqueda",
+  "cambiar_ingles": "Cambiar a Inglés",
+  "cambiar_espanol": "Cambiar a Español",
+  "usuario": "Usuario"
 }
