feat: agregar traducciones completas en inglés

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,9 +1,31 @@
 {
-  "inicio": "Home",
-  "adopta": "Adopt",
-  "apadrina_dona": "Sponsor & Donate",
-  "apoyanos": "Support Us",
-  "hogares_tepa": "Hogares Tepa",
-  "blog": "Blog",
-  "contactanos": "Contact Us"
+  "huellitas": "Little Paws",
+  "administrador": "Administrator",
+  "especie": "Species",
+  "estado": "Status",
+  "sexo": "Gender",
+  "tamano": "Size",
+  "ubicacion": "Location",
+  "todos": "All",
+  "buscar": "Search",
+  "cerrar": "Close",
+  "lapaz": "La Paz",
+  "perro": "Dog",
+  "gato": "Cat",
+  "conejo": "Rabbit",
+  "hamster": "Hamster",
+  "disponible": "Available",
+  "urgente": "Urgent",
+  "invisible": "Invisible",
+  "macho": "Male",
+  "hembra": "Female",
+  "mini": "Mini",
+  "pequeno": "Small",
+  "mediano": "Medium",
+  "grande": "Large",
+  "gigante": "XL",
+  "filtros_busqueda": "Search Filters",
+  "cambiar_ingles": "Switch to English",
+  "cambiar_espanol": "Switch to Spanish",
+  "usuario": "User"
 }
