feat: agregar traducciones en español e inglés

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,31 +1,60 @@
 {
-  "huellitas": "Little Paws",
-  "administrador": "Administrator",
+  "Bienvenido a Huellitas": "Welcome to Huellitas",
+  "Inicia sesión para continuar": "Log in to continue",
+  "Correo Electrónico": "Email",
+  "Contraseña": "Password",
+  "Iniciar Sesión": "Log In",
+  "O inicia sesión con": "Or log in with",
+  "¿No tienes cuenta?": "Don't have an account?",
+  "Crear cuenta": "Create Account",
+  "Registro de Usuario": "User Registration",
+  "Nombre": "First Name",
+  "Apellido Paterno": "Last Name (Paternal)",
+  "Apellido Materno": "Last Name (Maternal)",
+  "Cédula de Identidad": "ID Card",
+  "Número (8 dígitos)": "Number (8 digits)",
+  "Confirmar Contraseña": "Confirm Password",
+  "Selecciona género": "Select Gender",
+  "O regístrate con": "Or sign up with",
+  "¿Ya tienes cuenta?": "Already have an account?",
+  "Inicia sesión": "Log In",
+  "Masculino": "Male",
+  "Femenino": "Female",
+  "Otro": "Other",
+  "huellitas": "little footprints",
+  "usuario": "User",
+  "cambiar_ingles": "Switch to English",
+  "cambiar_espanol": "Switch to Spanish",
+  "todos": "All",
+  "cerrar": "Close",
+  "buscar": "Search",
   "especie": "Species",
   "estado": "Status",
   "sexo": "Gender",
   "tamano": "Size",
   "ubicacion": "Location",
-  "todos": "All",
-  "buscar": "Search",
-  "cerrar": "Close",
-  "lapaz": "La Paz",
   "perro": "Dog",
   "gato": "Cat",
   "conejo": "Rabbit",
   "hamster": "Hamster",
   "disponible": "Available",
   "urgente": "Urgent",
-  "invisible": "Invisible",
+  "invisible": "Hidden",
   "macho": "Male",
   "hembra": "Female",
   "mini": "Mini",
   "pequeno": "Small",
   "mediano": "Medium",
   "grande": "Large",
-  "gigante": "XL",
-  "filtros_busqueda": "Search Filters",
-  "cambiar_ingles": "Switch to English",
-  "cambiar_espanol": "Switch to Spanish",
-  "usuario": "User"
+  "gigante": "Giant",
+  "lapaz": "La Paz",
+  "inicio": "Home",
+  "usuarios": "Users",
+  "perros": "Dogs",
+  "gatos": "Cats",
+  "adopciones": "Adoptions",
+  "voluntarios": "Volunteers",
+  "reportes": "Reports",
+  "configuracion": "Settings",
+  "salir": "Logout"
 }
