--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,22 +1,45 @@
 {
+  "Bienvenido a Huellitas": "Bienvenido a Huellitas",
+  "Inicia sesión para continuar": "Inicia sesión para continuar",
+  "Correo Electrónico": "Correo Electrónico",
+  "Contraseña": "Contraseña",
+  "Iniciar Sesión": "Iniciar Sesión",
+  "O inicia sesión con": "O inicia sesión con",
+  "¿No tienes cuenta?": "¿No tienes cuenta?",
+  "Crear cuenta": "Crear cuenta",
+  "Registro de Usuario": "Registro de Usuario",
+  "Nombre": "Nombre",
+  "Apellido Paterno": "Apellido Paterno",
+  "Apellido Materno": "Apellido Materno",
+  "Cédula de Identidad": "Cédula de Identidad",
+  "Número (8 dígitos)": "Número (8 dígitos)",
+  "Confirmar Contraseña": "Confirmar Contraseña",
+  "Selecciona género": "Selecciona género",
+  "O regístrate con": "O regístrate con",
+  "¿Ya tienes cuenta?": "¿Ya tienes cuenta?",
+  "Inicia sesión": "Inicia sesión",
+  "Masculino": "Masculino",
+  "Femenino": "Femenino",
+  "Otro": "Otro",
   "huellitas": "Huellitas",
-  "administrador": "Administrador",
+  "usuario": "Usuario",
+  "cambiar_ingles": "Cambiar a inglés",
+  "cambiar_espanol": "Cambiar a español",
+  "todos": "Todos",
+  "cerrar": "Cerrar",
+  "buscar": "Buscar",
   "especie": "Especie",
   "estado": "Estado",
   "sexo": "Sexo",
   "tamano": "Tamaño",
   "ubicacion": "Ubicación",
-  "todos": "Todos",
-  "buscar": "Buscar",
-  "cerrar": "Cerrar",
-  "lapaz": "La Paz",
   "perro": "Perro",
   "gato": "Gato",
   "conejo": "Conejo",
   "hamster": "Hámster",
   "disponible": "Disponible",
   "urgente": "Urgente",
-  "invisible": "Invisible",
+  "invisible": "Oculto",
   "macho": "Macho",
   "hembra": "Hembra",
   "mini": "Mini",
@@ -24,8 +47,14 @@
   "mediano": "Mediano",
   "grande": "Grande",
   "gigante": "Gigante",
-  "filtros_busqueda": "Filtros de Búsqueda",
-  "cambiar_ingles": "Cambiar a Inglés",
-  "cambiar_espanol": "Cambiar a Español",
-  "usuario": "Usuario"
+  "lapaz": "La Paz",
+  "inicio": "Inicio",
+  "usuarios": "Usuarios",
+  "perros": "Perros",
+  "gatos": "Gatos",
+  "adopciones": "Adopciones",
+  "voluntarios": "Voluntarios",
+  "reportes": "Reportes",
+  "configuracion": "Configuración",
+  "salir": "Salir"
 }
